# ZegoVideoTalk

./: .gitignore  README.md
android/VideoTalk/app/: build.gradle
android/VideoTalk/app/src/main/: AndroidManifest.xml
android/VideoTalk/app/src/main/java/com/zego/videotalk/: MainActivity.java  VideoTalkApplication.java  ZegoAppHelper.java
android/VideoTalk/app/src/main/java/com/zego/videotalk/adapter/: VideoLiveViewAdapter.java
android/VideoTalk/app/src/main/java/com/zego/videotalk/ui/activities/: SettingsActivity.java  VideoTalkActivity.java
android/VideoTalk/app/src/main/res/layout/: activity_settings.xml
android/VideoTalk/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
android/VideoTalk/app/src/main/res/values-zh-rCN/: strings.xml
ios/VideoTalk/VideoTalk/VideoTalk/: AppDelegate.m
ios/VideoTalk/VideoTalk/VideoTalk.xcodeproj/project.xcworkspace/xcuserdata/xia.xcuserdatad/: UserInterfaceState.xcuserstate
ios/VideoTalk/VideoTalk/VideoTalk/Base.lproj/: Localizable.strings
ios/VideoTalk/VideoTalk/VideoTalk/en.lproj/: Localizable.strings
ios/VideoTalk/VideoTalk/VideoTalk/zh-Hans.lproj/: Localizable.strings
ios/VideoTalk/common/: ZegoManager.m  ZegoTalkToolViewController.h  ZegoTalkViewController.m  ZegoVideoTalkAdvancedTableViewController.m
ios/VideoTalk/common/zh-Hans.lproj/: ZegoSettingTableViewController.strings
ios/VideoTalk/iOS/VideoTalk/VideoTalk.xcodeproj/: project.pbxproj
ios/VideoTalk/iOS/common/: ZegoHomeViewController.m  ZegoLiveViewController.m  ZegoSetting.h  ZegoSetting.mm  ZegoSettingTableViewController.m  ZegoTalkToolViewController.m
ios/VideoTalk/iOS/common/Base.lproj/: ZegoHomeViewController.xib  ZegoSettingTableViewController.storyboard  ZegoTalkToolViewController.xib
ios/VideoTalk/iOS/common/en.lproj/: ZegoSettingTableViewController.strings
ios/VideoTalk/iOS/common/zh-Hans.lproj/: ZegoHomeViewController.strings
windows/VideoTalk/: CMakeLists.txt
windows/VideoTalk/VideoTalk/: CMakeLists.txt  Dialog - untitled  VideoTalk.sln  VideoTalk.vcxproj  VideoTalk.vcxproj.filters  ZegoMainDialog.qrc  ZegoMainDialog.ui  ZegoMusicHookDialog.ui  ZegoSettingsDialog.ui  ZegoVideoTalkDemo.cpp  ZegoVideoTalkDemo.h  ZegoVideoTalkDialog.ui  main.cpp  style.qrc  videotalk_en.ts  videotalk_zh.ts
windows/VideoTalk/VideoTalk/Base/: ZegoBase.cpp  ZegoBase.h
windows/VideoTalk/VideoTalk/Build-OSX/: README.txt  build.sh  generate.sh
windows/VideoTalk/VideoTalk/Config/: ZegoUserConfig.cpp  ZegoUserConfig.h
windows/VideoTalk/VideoTalk/Dialog/: ZegoMainDialog.cpp  ZegoMainDialog.h  ZegoMusicHookDialog.cpp  ZegoMusicHookDialog.h  ZegoSettingsDialog.cpp  ZegoSettingsDialog.h  ZegoVideoTalkDialog.cpp  ZegoVideoTalkDialog.h
windows/VideoTalk/VideoTalk/GeneratedFiles/: qrc_style.cpp  ui_ZegoMainDialog.h  ui_ZegoMusicHookDialog.h  ui_ZegoSettingsDialog.h  ui_ZegoVideoTalkDialog.h
windows/VideoTalk/VideoTalk/GeneratedFiles/Release/: moc_NoFocusFrameDelegate.cpp  moc_ZegoAVView.cpp  moc_ZegoLogLabel.cpp  moc_ZegoMainDialog.cpp  moc_ZegoMircophone.cpp  moc_ZegoMusicHookDialog.cpp  moc_ZegoSDKSignal.cpp  moc_ZegoSettingsDialog.cpp  moc_ZegoVideoTalkDialog.cpp
windows/VideoTalk/VideoTalk/Model/: ZegoRoomMsgModel.h  ZegoSettingsModel.cpp  ZegoSettingsModel.h  ZegoStreamModel.cpp  ZegoStreamModel.h
windows/VideoTalk/VideoTalk/NSIS/: VideoTalk.nsi
windows/VideoTalk/VideoTalk/OSX_Objective-C/: ZegoViewMinimum.mm
windows/VideoTalk/VideoTalk/Signal/: ZegoSDKSignal.cpp  ZegoSDKSignal.h
windows/VideoTalk/VideoTalk/SoftWareInfo/: ZegoSoftWareInfo.cpp  ZegoSoftWareInfo.h
windows/VideoTalk/VideoTalk/UI/: ZegoAVView.cpp  ZegoAVView.h
windows/VideoTalk/build-osx/: build.sh
windows/VideoTalk/include/zegoaudiohook/: ZegoAudioHook.h
windows/VideoTalk/include/zegoliveroom/: LiveRoom-IM.h  LiveRoom-Player.h  LiveRoom-Publisher.h  LiveRoom.h  LiveRoomCallback-Player.h  LiveRoomCallback-Publisher.h  LiveRoomCallback.h  video_capture.h
windows/VideoTalk/libs/x64/Release/: ZegoLiveRoom.lib
windows/VideoTalk/libs/x64/Release/Release/: ZegoLiveRoom.lib
windows/VideoTalk/libs/x86/Release/: ZegoAudioHook.lib  ZegoLiveRoom.lib  ZegoSurfaceMerge.lib
windows/VideoTalk/libs/x86/Release/Release/: ZegoLiveRoom.lib
